--- a/sc2023.md
+++ b/sc2023.md
@@ -1,11 +1,11 @@
-# Fomentando la Creatividad y Diseño con Tecnología y Materiales Cotidianos
+# Semana de la Ciencia 2023: Fomentando la Creatividad y Diseño con Tecnología y Materiales Cotidianos
 
 Taller impartido por José Manuel Vega Cebrián, Elena Márquez Segura, Ana Tajadura Jiménez y Joaquín Díaz Durán, investigadoras del Dpto. de Informática de la UC3M.
 
-Jueves 16 de noviembre a las 17:30 horas
-Aula Puerta de la Cultura, UC3M Campus Puerta de Toledo
+* Jueves 16 de noviembre de 2023 a las 17:30 horas
+* [Aula Puerta de la Cultura](https://maps.app.goo.gl/VddfasqBYUGfuTzy5), UC3M Campus Puerta de Toledo
 
-[Reserva tu plaza en este formulario](https://forms.gle/3oKP2TQJJAoNH3Pd8)
+[**Reserva tu plaza en este formulario**](https://forms.gle/3oKP2TQJJAoNH3Pd8)
 
 En este taller participativo y divulgativo enseñamos al público a usar su propio cuerpo y el de otros/as participantes; tecnología y elementos cotidianos; y el espacio físico para pensar creativamente, y diseñar tecnología innovadora.
 
@@ -15,4 +15,4 @@ Juntos/as, usaremos estas cajas de ideación corporal para encontrar un problema
 
 El taller está dirigido para el público general; no es necesario tener experiencia previa de diseño, ni con la tecnología. Se anima especialmente a la participación de educadores/as, diseñadores/as, o cualquier otro/a profesional al que le interesen los métodos innovadores para fomentar la creatividad e imaginar situaciones y tecnología futura.
 
-Acción financiada por la Comunidad de Madrid a través de la línea "Fondos de Investigación para las Ayudas Beatriz Galindo" del Convenio Plurianual con la UC3M (MovIntPlayLab-CM-UC3M), en el marco del V PRICIT (V Plan Regional de Investigación Científica e Innovación Tecnológica) y por el Consejo Europeo de Investigación en el marco del programa de investigación e innovación Horizonte 2020 de la Unión Europea (acuerdo de subvención nº 101002711, Proyecto BODYinTRANSIT). 
+*Acción financiada por la Comunidad de Madrid a través de la línea "Fondos de Investigación para las Ayudas Beatriz Galindo" del Convenio Plurianual con la UC3M (MovIntPlayLab-CM-UC3M), en el marco del V PRICIT (V Plan Regional de Investigación Científica e Innovación Tecnológica) y por el Consejo Europeo de Investigación en el marco del programa de investigación e innovación Horizonte 2020 de la Unión Europea (acuerdo de subvención nº 101002711, Proyecto BODYinTRANSIT).*
