added Judith and Magic outFit

--- a/sc2023.md
+++ b/sc2023.md
@@ -1,6 +1,6 @@
 # Semana de la Ciencia 2023: Fomentando la Creatividad y Diseño con Tecnología y Materiales Cotidianos
 
-Taller impartido por José Manuel Vega Cebrián, Elena Márquez Segura, Ana Tajadura Jiménez y Joaquín Díaz Durán, investigadoras del Dpto. de Informática de la UC3M.
+Taller impartido por José Manuel Vega Cebrián, Elena Márquez Segura, Ana Tajadura Jiménez, Joaquín Díaz Durán y Judith Ley Flores, investigadoras del Dpto. de Informática de la UC3M.
 
 * Jueves 16 de noviembre de 2023 a las 17:30 horas
 * [Aula Puerta de la Cultura](https://maps.app.goo.gl/VddfasqBYUGfuTzy5), UC3M Campus Puerta de Toledo
@@ -15,4 +15,4 @@ Juntos/as, usaremos estas cajas de ideación corporal para encontrar un problema
 
 El taller está dirigido para el público general; no es necesario tener experiencia previa de diseño, ni con la tecnología. Se anima especialmente a la participación de educadores/as, diseñadores/as, o cualquier otro/a profesional al que le interesen los métodos innovadores para fomentar la creatividad e imaginar situaciones y tecnología futura.
 
-*Acción financiada por la Comunidad de Madrid a través de la línea "Fondos de Investigación para las Ayudas Beatriz Galindo" del Convenio Plurianual con la UC3M (MovIntPlayLab-CM-UC3M), en el marco del V PRICIT (V Plan Regional de Investigación Científica e Innovación Tecnológica) y por el Consejo Europeo de Investigación en el marco del programa de investigación e innovación Horizonte 2020 de la Unión Europea (acuerdo de subvención nº 101002711, Proyecto BODYinTRANSIT).*
+*Acción financiada por la Comunidad de Madrid a través de la línea "Fondos de Investigación para las Ayudas Beatriz Galindo" del Convenio Plurianual con la UC3M (MovIntPlayLab-CM-UC3M), en el marco del V PRICIT (V Plan Regional de Investigación Científica e Innovación Tecnológica), por el Consejo Europeo de Investigación en el marco del programa de investigación e innovación Horizonte 2020 de la Unión Europea (acuerdo de subvención nº 101002711, Proyecto BODYinTRANSIT) y por la Agencia Estatal de Investigación (MCIN/AEI/10.13039/501100011033/, Proyecto Magic outFit).*
